--- a/docs/asciidoc/modules/ROOT/pages/data-structures/conversion-functions.adoc
+++ b/docs/asciidoc/modules/ROOT/pages/data-structures/conversion-functions.adoc
@@ -8,7 +8,8 @@ Sometimes type information gets lost, these functions help you to coerce an "Any
 |===
 | xref::overview/apoc.convert/apoc.convert.toString.adoc[apoc.convert.toString(value)]  | tries its best to convert the value to a string
 | xref::overview/apoc.convert/apoc.convert.toMap.adoc[apoc.convert.toMap(value)] | tries its best to convert the value to a map
-| apoc.convert.toList(value) | tries its best to convert the value to a list
+| xref::overview/apoc.convert/apoc.convert.toList.adoc[apoc.convert.toList(value)] | tries its best to convert the value to a list of length one containing the value
+| xref::overview/apoc.convert/apoc.convert.fromJsonList.adoc[apoc.convert.fromJsonList(value)] | tries its best to convert the value to a JSON object.  
 | xref::overview/apoc.convert/apoc.convert.toBoolean.adoc[apoc.convert.toBoolean(value)] | tries its best to convert the value to a boolean
 | apoc.convert.toNode(value) | tries its best to convert the value to a node
 | apoc.convert.toRelationship(value) | tries its best to convert the value to a relationship
